# causal_vision

./: .gitattributes  .gitignore  alternative.py  causalvis_job  cnn_angle_decoder.py  cnn_double_decoder.py  cnn_rnn_gabor_model.pth  cnn_rnn_vector.py  conv_cluster_job  conv_rnn_2d_cluster.py  conv_rnn_cluster.py  conv_test.py  conv_test_cluster.py  different_sigmas.qmd  feedforward.py  feedforward_decode.py  feedforward_feature.py  feedforward_two_source.py  gabor_tests.py  kong_task.py  main.py  main_nonrecurrent.py  main_torus.py  model_tester.py  progress.html  progress.md  progress.qmd  pyproject.toml  recoder.py  test.py  test_output.csv  two_source_concept.r  vector_model_tester.py
decoders/: vector_angle_color_decoder_nn.pth  vector_angle_color_decoder_svm.pkl  vector_angle_decoder_nn.pth  vector_angle_decoder_svm.pkl
lib/: args.py  config.py  generators.py  generators_wip.py  rnn.py  runner.py  save.py  trial.py  utils.py
refactor/: generators.py  task.py  trial.py  utils.py
section_4/: feed_forward_neuron.py  main.py
section_5/: main1.py  rate_rnn.py
section_6/: main_non_spatial.py  main_spatial.py  rate_rnn_with_io.py  utils.py
section_6/non_spatial/: main.py
section_6/spatial/: main.py
section_chris/: ReluRNNLayer.py  feed_forward_spiking_neuron.py  main_grid.py  main_nonspatial.py  main_spatial.py  main_spiking.py  main_torus.py  utils_chris.py
